# TDD-with-Python

./: pyproject.toml
superlist/: functional_tests.py
superlist/lists/: tests.py  views.py
superlist/lists/templates/: home.html
superlist/superlist/: settings.py  urls.py
